// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders with FlightDetails for the flight-details/:id path 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  style={
    {
      "marginBottom": "20px",
    }
  }
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-bc2eyb-MuiTypography-root"
  >
    Flight Details
     
    <img
      alt=""
      className="css-9pi6fj"
      src="/icons8-flight-50.png"
    />
  </p>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-3su884-MuiPaper-root"
    style={
      {
        "backgroundColor": "#f4f4f4",
        "borderRadius": "10px",
        "boxShadow": "0px 4px 10px rgba(0, 0, 0, 0.1)",
        "marginBottom": "20px",
        "padding": "20px",
      }
    }
  >
    <span
      className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style={
        {
          "display": "block",
          "height": 40,
          "margin": "50px auto",
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx={44}
          cy={44}
          fill="none"
          r={20.2}
          strokeWidth={3.6}
          style={{}}
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`App renders with FlightStatusTable for the root path 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-bc2eyb-MuiTypography-root"
  >
    Flight Status
     
    <img
      alt=""
      className="css-9pi6fj"
      src="/icons8-flight-50.png"
    />
  </p>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1ps6pg7-MuiPaper-root"
  >
    <span
      className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style={
        {
          "display": "block",
          "height": 40,
          "margin": "50px auto",
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx={44}
          cy={44}
          fill="none"
          r={20.2}
          strokeWidth={3.6}
          style={{}}
        />
      </svg>
    </span>
  </div>
</div>
`;
